--- a/aws-auth-patch.yml
+++ b/aws-auth-patch.yml
@@ -4,36 +4,31 @@ data:
     - groups:
       - system:bootstrappers
       - system:nodes
-      rolearn: arn:aws:iam::976344221298:role/UdacityFlaskDeployCBKubectlRole
-       username: build
-       groups:
-         - system:masters
+      rolearn: arn:aws:iam::976344221298:role/eksctl-simple-jwt-api-nodegroup-n-NodeInstanceRole-1402B0PQXXMPF
       username: system:node:{{EC2PrivateDNSName}}
+    - groups:
+      - system:masters
+      rolearn: arn:aws:iam::976344221298:role/UdacityFlaskDeployCBKubectlRole
+      username: build
+
   mapUsers: |
     []
 kind: ConfigMap
 metadata:
-  creationTimestamp: "2021-01-15T22:53:04Z"
+  creationTimestamp: "2021-01-18T20:53:19Z"
   managedFields:
   - apiVersion: v1
     fieldsType: FieldsV1
     fieldsV1:
       f:data:
         .: {}
+        f:mapRoles: {}
         f:mapUsers: {}
     manager: eksctl.exe
     operation: Update
-    time: "2021-01-15T22:53:04Z"
-  - apiVersion: v1
-    fieldsType: FieldsV1
-    fieldsV1:
-      f:data:
-        f:mapRoles: {}
-    manager: kubectl-patch
-    operation: Update
-    time: "2021-01-15T23:20:39Z"
+    time: "2021-01-18T20:53:19Z"
   name: aws-auth
   namespace: kube-system
-  resourceVersion: "6535"
+  resourceVersion: "1697"
   selfLink: /api/v1/namespaces/kube-system/configmaps/aws-auth
-  uid: 29037221-ad89-4714-b936-f5c13360fcfa
+  uid: 7db30a2d-6a45-4426-a279-b9c983b709f6
